08/09 U Updated FAQ file regarding bug #314                       [#314]
08/08 U Updated Spanish language file (es.l)                      [ #00]
08/07 U Updated GeoIP database file                               [ #00]
07/18 U Updated GeoIP database file                               [ #00]
01/06 U Updated GeoIP.dat                                         [ #00]
11/12 F Fixed chanstats problems after removing user from exclude [#427]
11/12 F Help for CHANSTATS SET was wrong in italian lang file     [ #00]
11/12 F Fixed Asuka nick parser skipping some nicks               [#445]
11/12 F Fixed segfault on topic set in Asuka                      [#444]
11/11 F Fixed sjoin with more than two parameters going wrong     [#443]
10/07 F Fixed segfault in Asuka topic handling                    [#439]
09/12 F Fixed SQL structure error of ison table                   [ #00]
09/04 F Fixed SVSKILL not being handled                           [#421]
08/30 F Fixed SQL column for server uptime limiting to 97 days    [#428]
08/30 F Applied Trystan's signals patch                           [#429]
08/26 F Fixed query problem in chanstats on some x64 boxes        [ #00]
08/23 F Fixed issue with not registered users on P10              [#416]
08/19 F Fixed admin table scheme not mysql 4.0 compatible         [ #00]
08/17 F smiley counting was wrong on x64 boxes                    [#411]
08/16 F Denora can load one protocol each time                    [ #00]
08/15 F Fixed crash on xmlrpc connection                          [#403]
08/13 F [nefarious] Local kills are now detected                  [#404]
08/13 F [bahamut] Local kills are now detected                    [#404]
08/11 F [inspircd11] CAPAB support                                [ #00]
08/11 F Fixed SQUIT not handled properly on P10 IRCds             [#395]
08/10 F [inspircd11] Local kills are now detected                 [#404]
08/10 F Fixed broken behavior on certain server splits            [#347]