@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="109"
+VERSION_BUILD="110"
 
 # $Log$
+#
+# BUILD : 1.4.0.110 (SVN)
+# BUGS  : N/A
+# NOTES : Fixed topic setter not handled correctly in asuka
 #
 # BUILD : 1.4.0.109 (SVN)
 # BUGS  : 427
