@@ -30,6 +30,7 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+11/14 F Fixed topic setter not handled correctly in asuka         [ #00]
 11/12 F Fixed chanstats problems after removing user from exclude [#427]
 11/12 F Help for CHANSTATS SET was wrong in italian lang file     [ #00]
 11/12 F Fixed Asuka nick parser skipping some nicks               [#445]
